--- a/ran.css
+++ b/ran.css
@@ -70,8 +70,15 @@ section .container {
 #about img {
     display: block;
     margin: 20px auto;
-    max-width: 100%;
+    padding-right: 1000px;
+    max-width: 20%;
+    align-content: left;
+    margin-bottom: 100px;
 }
+ .ran {
+    text-align: center;
+    margin-bottom: 200px;
+ }
 
 /* Testimonials Section Styles */
 #testimonials {
