--- a/login.css
+++ b/login.css
@@ -14,7 +14,7 @@ body {
 /* Header Styles */
 h1 {
     text-align: center;
-    color: #333;
+    color: #6ab04c;
     margin: 20px 0;
     font-size: 2.5em;
 }
@@ -43,7 +43,7 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    background-color: #575757;
+    background-color: #6ab04c;
 }
 
 /* Login Form Styles */
@@ -63,7 +63,7 @@ nav ul li a:hover {
 
 .login-container h2 {
     margin-bottom: 20px;
-    color: #333;
+    color: #6ab04c;
     font-size: 1.8em;
 }
 
@@ -80,7 +80,7 @@ nav ul li a:hover {
 .login-container input[type="submit"] {
     width: 100%;
     padding: 10px;
-    background-color: #333;
+    background-color: #6ab04c;
     color: white;
     border: none;
     border-radius: 5px;
@@ -90,7 +90,7 @@ nav ul li a:hover {
 }
 
 .login-container input[type="submit"]:hover {
-    background-color: #575757;
+    background-color: #6ab04c;
 }
 
 /* Responsive Styles */
@@ -115,7 +115,7 @@ body {
 
 h1 {
     text-align: center;
-    color: #333;
+    color: #6ab04c;
     margin-bottom: 30px;
     font-size: 2.5em;
 }
@@ -123,12 +123,13 @@ h1 {
 /* Form Styles */
 form {
     width: 300px;
-    padding: 30px;
+    padding: 40px;
     background-color: white;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
+    border-radius: 20px;
     text-align: center;
     transition: transform 0.3s ease-in-out;
+    padding-right: 60px;
 }
 
 form:hover {
@@ -154,12 +155,12 @@ input[type="password"] {
 }
 
 input[type="submit"] {
-    width: 100%;
+    width: 110%;
     padding: 10px;
-    background-color: #333;
+    background-color: #6ab04c;
     color: white;
     border: none;
-    border-radius: 5px;
+    border-radius: 100px;
     cursor: pointer;
     font-size: 1em;
     transition: background-color 0.3s ease-in-out;
