--- a/ran.css
+++ b/ran.css
@@ -7,10 +7,19 @@ body {
     background-color: #f4f4f4;
 }
 
+.gambar1{
+    width: 70px;
+    padding-right: 100px;
+}
+
+.gambar {
+    width: 1519px;
+}
+
 /* Navigation Styles */
 nav {
-    background: #333;
-    color: #fff;
+    background: white;
+    color: black;
     padding: 10px 0;
     text-align: center;
 }
@@ -26,7 +35,7 @@ nav ul li {
 }
 
 nav ul li a {
-    color: #fff;
+    color: black;
     text-decoration: none;
     font-weight: bold;
 }
@@ -69,15 +78,14 @@ section .container {
 /* About Section Styles */
 #about img {
     display: block;
-    margin: 20px auto;
+    margin: 10px auto;
     padding-right: 1000px;
-    max-width: 20%;
+    max-width: 10%;
     align-content: left;
-    margin-bottom: 100px;
+    margin-bottom: 50px;
 }
  .ran {
     text-align: center;
-    margin-bottom: 200px;
  }
 
 /* Testimonials Section Styles */
