--- a/ran.css
+++ b/ran.css
@@ -14,6 +14,7 @@ body {
 .gambar1{
     width: 70px;
     padding-right: 100px;
+    padding-left: 250px;
 }
 
 .gambar {
@@ -22,10 +23,14 @@ body {
 
 /* Navigation Styles */
 nav {
-    
+    position: fixed;
     color: black;
     padding: 10px 0;
-    text-align: center;
+    padding-left: 455px;
+    background-color: white;
+    padding-right: 472px;
+    padding-bottom: 0px;
+    margin: auto;
 }
 
 nav ul {
@@ -50,6 +55,8 @@ header {
     color: #fff;
     padding: 50px 0;
     text-align: center;
+    padding-top: 200px;
+    width: 100%;
 }
 
 header h1 {
@@ -60,6 +67,10 @@ header h1 {
 header h3 {
     margin: 10px 0 0;
     font-size: 1.5em;
+}
+
+.slideshow-container{
+    align-items: center;
 }
 
 /* Section Styles */
@@ -80,6 +91,9 @@ section .container {
 }
 
 /* About Section Styles */
+#about {
+    padding-top: 150px;
+}
 #about img {
     display: block;
     margin: 10px auto;
@@ -98,6 +112,7 @@ section .container {
     color: #333;
     text-align: center;
     padding: 50px 0;
+    padding-top: 150px;
 }
 
 #testimonials p {
@@ -129,6 +144,7 @@ section .container {
     color: #fff;
     padding: 50px 0;
     text-align: center;
+    padding-top: 150px;
 }
 
 #Contact h1 {
