--- a/Home/ran.css
+++ b/Home/ran.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap');
 html {
     scroll-behavior: smooth;
 }
@@ -9,6 +10,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
+    margin-bottom: 0;
 }
 
 .gambar1{
@@ -26,11 +28,25 @@ nav {
     position: fixed;
     color: black;
     padding: 10px 0;
-    padding-left: 455px;
     background-color: white;
-    padding-right: 472px;
-    padding-bottom: 0px;
     margin: auto;
+    width: 100%;
+    top: 0;
+    left: 0;
+    right: 0 px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    z-index: 999;
+    display: center;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Jost', sans-serif;
+
+}
+
+nav img {
+    float: left;
+    margin-right: 100px;
+    max-width: 10%;
 }
 
 nav ul {
@@ -41,13 +57,16 @@ nav ul {
 nav ul li {
     display: inline;
     margin-right: 20px;
+    font-weight: 400;
 }
 
 nav ul li a {
     color: black;
     text-decoration: none;
-    font-weight: bold;
+    font-weight: 700;
+    transition: color 0.3s ease;
 }
+
 
 /* Header Styles */
 header {
@@ -56,21 +75,33 @@ header {
     padding: 50px 0;
     text-align: center;
     padding-top: 200px;
+    padding-bottom: 100px;
     width: 100%;
 }
 
 header h1 {
+    color: black;
+    font-weight: 800;
     margin: 0;
-    font-size: 2.5em;
+    font-size: 3em;
+
 }
 
 header h3 {
-    margin: 10px 0 0;
-    font-size: 1.5em;
+    color: black;
+    font-weight: 800;
+    margin: 0;
+    font-size: 2em;
 }
 
+
 .slideshow-container{
+    background-color: white;
     align-items: center;
+    width: 100%;
+    padding-top: 10px;
+    padding-bottom: 0px;
+    font-family: 'Jost', sans-serif;
 }
 
 /* Section Styles */
@@ -92,7 +123,14 @@ section .container {
 
 /* About Section Styles */
 #about {
-    padding-top: 150px;
+    padding: 250px 0;
+    width: 100%;
+    background-color: #fff;
+    color: #333;
+    text-align: center;
+    padding-bottom: 200px;
+    font-family: 'jost', sans-serif;
+
 }
 #about img {
     display: block;
@@ -104,6 +142,7 @@ section .container {
 }
  .ran {
     text-align: center;
+    font-family: 'Jost', sans-serif;
  }
 
 /* Testimonials Section Styles */
@@ -113,6 +152,8 @@ section .container {
     text-align: center;
     padding: 50px 0;
     padding-top: 150px;
+    font-family: 'Jost', sans-serif;
+    margin-bottom: 150px;
 }
 
 #testimonials p {
@@ -145,6 +186,7 @@ section .container {
     padding: 50px 0;
     text-align: center;
     padding-top: 150px;
+    padding-bottom: 100px;
 }
 
 #Contact h1 {
@@ -166,6 +208,7 @@ footer {
     color: #fff;
     text-align: center;
     padding: 20px 0;
+    margin-bottom: 0 ;
 }
 
 footer h1 {
